fix overflow

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,4 +1,4 @@
 .sidebar {
-  height: calc(100vh - 160px);
+  height: calc(100vh - 150px);
   overflow: auto;
 }
